fix(backend): remove Arrays dependency in CORS config